wxc/include/ewxw/wxc_glue.h

/* wxStopWatch */
TClassDef(wxStopWatch)
TClass(wxStopWatch) wxStopWatch_Create();
void      wxStopWatch_Delete(TSelf(wxStopWatch) _obj);
void      wxStopWatch_Start(TSelf(wxStopWatch) _obj, int msec);
void      wxStopWatch_Pause(TSelf(wxStopWatch) _obj);
void      wxStopWatch_Resume(TSelf(wxStopWatch) _obj);
int       wxStopWatch_Time(TSelf(wxStopWatch) _obj);
void       wxTimer_Delete( TSelf(wxTimer) _obj );
int        wxTimer_GetInterval( TSelf(wxTimer) _obj );
TBool      wxTimer_IsOneShot( TSelf(wxTimer) _obj );
TBool      wxTimer_IsRuning( TSelf(wxTimer) _obj );
TBool      wxTimer_Start( TSelf(wxTimer) _obj, int _int, TBool _one );
void       wxTimer_Stop( TSelf(wxTimer) _obj );